add jutify to p_1

--- a/css/about.css
+++ b/css/about.css
@@ -42,6 +42,7 @@
 
 #about_section .about_content .p_1
 {
+	text-align: justify;
 	font-family: calibre_regular;
 	font-size: 20px;
 	color: var(--black_text);
